--- a/hiera/users/atmos.yaml
+++ b/hiera/users/atmos.yaml
@@ -9,3 +9,7 @@
 
 # See https://github.com/boxen/puppet-ruby for docs
 ruby::global::version: "2.2.0"
+
+# atmoshax
+boxen::config::srcdir: "/Users/atmos/p"
+boxen::config::homebrew_root: "/usr/local"
