--- a/hiera/users/atmos.yaml
+++ b/hiera/users/atmos.yaml
@@ -14,3 +14,57 @@ ruby::global::version: "2.2.2"
 # atmoshax
 boxen::config::srcdir:   "/Users/atmos/p"
 boxen::config::reponame: "atmos/my-boxen"
+
+projects::personal::homebrew_packages:
+  - ansible
+  - awscli
+  - bash-completion
+  - coreutils
+  - ctags
+  - gpgme
+  - gnu-sed
+  - heroku-toolbelt
+  - ipcalc
+  - jq
+  - mercurial
+  - mobile-shell
+  - mtr
+  - packer
+  - reattach-to-user-namespace
+  - the_silver_searcher
+  - tmux
+  - socat
+  - watch
+
+people::atmos::projects:
+  camo:
+    nodejs: v0.10.29
+    source: atmos/camo
+
+  heaven:
+    ruby: 2.1.2
+    redis: true
+    nginx: true
+    source: atmos/heaven
+    postgresql: true
+
+  hubot:
+    nodejs: v0.10.29
+    source: github/hubot
+
+  hubot-auto-deploy:
+    nodejs: v0.10.29
+    source: atmos/hubot-auto-deploy
+
+  hubot-deploy:
+    nodejs: v0.10.29
+    source: atmos/hubot-deploy
+
+  hubot-gtalk:
+    nodejs: v0.10.29
+    source: atmos/hubot-gtalk
+
+people::atmos::private_projects:
+  zero-fucks-hubot:
+    nodejs: v0.10.29
+    source: ZeroFucks/zero-fucks-hubot
