--- a/hiera/users/atmos.yaml
+++ b/hiera/users/atmos.yaml
@@ -80,3 +80,14 @@ people::atmos::private_projects:
   zero-fucks-hubot:
     nodejs: v0.12.4
     source: ZeroFucks/zero-fucks-hubot
+  pyrot:
+    ruby: 2.2.2
+    source: pyrot/pyrot
+  toryp:
+    ruby: 2.2.2
+    source: pyrot/toryp
+  newzcache-web:
+    ruby: 2.2.2
+    source: pyrot/newzcache-web
+  parlour-ios:
+    source: pyrot/parlour-ios
