Add a few more casks.

--- a/hiera/users/1337807.yaml
+++ b/hiera/users/1337807.yaml
@@ -79,4 +79,11 @@ projects::personal::casks:
   - grandperspective
   - iterm2
   - mailbox
+  - minecraft
+  - screenhero
+  - slack
+  - speak
   - sublime-text
+  - teamviewer
+  - utorrent
+  - virtualbox
