--- a/hiera/users/1337807.yaml
+++ b/hiera/users/1337807.yaml
@@ -77,6 +77,7 @@ projects::personal::casks:
   - firefox
   - google-chrome
   - grandperspective
+  - hipchat
   - iterm2
   - mailbox
   - minecraft
