Brew ruby-install.

--- a/hiera/users/1337807.yaml
+++ b/hiera/users/1337807.yaml
@@ -54,6 +54,7 @@ projects::personal::homebrew_packages:
   - readline
   - reattach-to-user-namespace
   - redis
+  - ruby-install
   - rust
   - siege
   - sqlite
