Brew docker-compose, cask tmate.

--- a/hiera/users/1337807.yaml
+++ b/hiera/users/1337807.yaml
@@ -29,7 +29,7 @@ projects::personal::homebrew_packages:
   - cmake
   - coreutils
   - ctags
-  - docker
+  - docker-compose
   - gcc
   - glib
   - gpg
